--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,12 +1,14 @@
 
-<%= simple_form_for(@post) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
+<%= form_with model:@post do |f| %>
   <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :views %>
-    <%= f.association :user %>
+    <%= f.label :title, class:"form-control strong"%>
+    <%= f.text_field :title %>
+
+    <%= f.label :thumbnail, class:"form-control"%>
+    <%= f.file_field :thumbnail %>
+    <%= f.label :banner, class:"form-control"%>
+    <%= f.file_field :banner%>
+    <%= f.rich_text_area :body%>
   </div>
 
   <div class="form-actions">
