--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,20 @@
-<p id="notice"><%= notice %></p>
+<div style="width: 100%; height: 300px; overflow-y:hidden;">
+  <%= image_tag(@post.banner, style:'width:100%')%>
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
-
-<p>
-  <strong>Views:</strong>
-  <%= @post.views %>
-</p>
-
-<p>
-  <strong>User:</strong>
-  <%= @post.user_id %>
-</p>
-
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<div class="container" style="margin-top: 2em;">
+  <div class="row">
+    <div class="jumbotron"style="width: 100%;">
+      <h1 class="display-4" >
+        <%= link_to @post.title, root_path%>
+      </h1>
+      <p class="lead">
+        <%= @post.updated_at.strftime("%A, %B %e, %Y")%> by <%= @post.user.user_name%> | <%= pluralize(@post.views, "View")%>
+      </p>
+      <hr class="my-h">
+      <div class="post_body">
+        <%= @post.body%>
+      </div>
+    </div>
+  </div>
+</div>
