--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,37 @@
 <div class="container">
-  <%= @posts.each do |post|%>
-    <div class="row">
-      <div class="card mb-3">
+
+  <% @posts.each do |post|%>
+
+    <div class="row" >      
+      <div class="card mb-3" style="width: 100%;">
         <img 
           class ="card-img-top"
           src="<%= url_for post.optimized_image(post.thumbnail,586,180)%>%"
           alt="Blog Post Image Thumbnail"
         />
+        <div class="card-body">
+          <h5 class="card-title"><%= link_to post.title, post %></h5>
+          <p class="card-text">
+            <%= post.description%>
+          </p>
+          <p class="card-text">
+            <small class="text-muted">
+              <%= post.updated_at.strftime("%A, %B %e, %Y")%> by <%= post.user.user_name %> |
+              <%= pluralize(post.views, "View")%>
+            </small>
+          </p>
+        </div>
       </div>
     </div>
+
   <% end%>
+
+  <div class="row">
+    <div class="apple_pagination" style="width: 100%;">
+      <%= will_paginate @posts, :container => false %>      
+    </div>
+  </div>
+
+
+
 </div>
