--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 
-  <div class="jumbotron container">
+  <div class="container">
     <h1 class="display-4">About Us</h1>
         <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -25,9 +25,9 @@
     </p>
 
     <div class="btn-group" role="group" aria-label="Basic example">
-      <button type="button" class="btn btn-secondary">Instagram</button>
-      <button type="button" class="btn btn-secondary">Itch.io</button>
-      <button type="button" class="btn btn-secondary">Github</button>
+      <%= link_to "Instagram", "https://www.instagram.com/jonmakesart/", class: "btn btn-secondary"%>
+      <%= link_to "Itchi.Io", "https://shrikefound.itch.io/", class: "btn btn-secondary"%>
+      <%= link_to "Github", "https://github.com/ShrikeFound", class: "btn btn-secondary"%>
     </div>
 
   </div>
