--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -35,3 +35,10 @@
 .apple_pagination a:focus {
   text-decoration: underline;
 }
+
+.row {
+  padding: 2em;
+}
+body {
+  font-family: "Montserrat", sans-serif;
+}
