--- a/app/javascript/packs/src/application.scss
+++ b/app/javascript/packs/src/application.scss
@@ -21,8 +21,94 @@ body {
   font-family: "Montserrat", sans-serif !important;
 }
 
-h1 {
+h1,
+h1.display-4 {
   font-family: "Prata", serif;
+  color: var(--primary);
+}
+
+/* Paginations */
+
+.apple_pagination {
+  text-align: center;
+  padding: 1em;
+  cursor: default;
+}
+.apple_pagination a,
+.apple_pagination span {
+  padding: 0.2em 0.3em;
+}
+.apple_pagination .disabled {
+  color: #aaaaaa;
+}
+.apple_pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  display: inline-block;
+  width: 1.4em;
+  height: 1.4em;
+  line-height: 1.5;
+  -moz-border-radius: 1em;
+  -webkit-border-radius: 1em;
+  border-radius: 1em;
+}
+.apple_pagination a {
+  text-decoration: none;
+  color: black;
+}
+.apple_pagination a:hover,
+.apple_pagination a:focus {
+  text-decoration: underline;
+}
+
+.row {
+  padding: 1.5em;
+}
+
+.card-title a {
+  font-family: "Prata", serif;
+}
+
+p.lead {
+  font-size: 1.1rem;
+}
+p {
+  line-height: 1.85;
+}
+
+div.container {
+  padding: 1.5em;
+}
+
+.text-area {
+  margin-top: 1em;
+  min-height: 30em;
+  border: 2px solid grey;
+  border-radius: 5px;
+}
+
+trix-toolbar {
+  margin-top: 1em;
+}
+
+trix-toolbar button {
+  border: 1px solid grey;
+  border-radius: 5px;
+}
+
+.description-input {
+  width: max-content;
+  max-width: 100%;
+}
+
+div.custom-card {
+  border: none;
+}
+div.trix-content {
+  line-height: 1.85;
+}
+.container:first-of-type {
+  padding-top: 3em;
 }
 
 @import "~bootstrap/scss/bootstrap";
