--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,11 +4,13 @@
 
     <div class="row" >      
       <div class="card mb-3 custom-card" style="width: 100%;">
+        <% post.thumbnail.is_attached? %>
         <img 
           class ="card-img-top"
           src="<%= url_for post.optimized_image(post.thumbnail,586,180)%>%"
           alt="Blog Post Image Thumbnail"
         />
+        <% end %>
         <div class="card-body">
           <h5 class="card-title"><%= link_to post.title, post %></h5>
           <p class="card-text">
