lesson learned. never commit without testing, now matter how small the change.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
     <div class="row" >      
       <div class="card mb-3 custom-card" style="width: 100%;">
-        <% post.thumbnail.is_attached? %>
+        <% if post.thumbnail.is_attached? %>
         <img 
           class ="card-img-top"
           src="<%= url_for post.optimized_image(post.thumbnail,586,180)%>%"
