--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,10 +4,10 @@
 
     <div class="row" >      
       <div class="card mb-3 custom-card" style="width: 100%;">
-        <% if post.thumbnail.is_attached? %>
+        <% if post.thumbnail.attached? %>
         <img 
           class ="card-img-top"
-          src="<%= url_for post.optimized_image(post.thumbnail,586,180)%>%"
+          src="<%= url_for post.thumbnail.variant(resize_to_fill: [560,180]).processed%>%"
           alt="Blog Post Image Thumbnail"
         />
         <% end %>
