--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -25,9 +25,9 @@
     </p>
 
     <div class="btn-group" role="group" aria-label="Basic example">
-      <%= link_to "Instagram", "https://www.instagram.com/jonmakesart/", class: "btn btn-secondary"%>
-      <%= link_to "Itchi.Io", "https://shrikefound.itch.io/", class: "btn btn-secondary"%>
-      <%= link_to "Github", "https://github.com/ShrikeFound", class: "btn btn-secondary"%>
+      <%= link_to "Instagram", "https://www.instagram.com/jonmakesart/", class: "btn btn-secondary icon icon-instagram"%>
+      <%= link_to "Itchi.Io", "https://shrikefound.itch.io/", class: "btn btn-secondary icon icon-itchio"%>
+      <%= link_to "Github", "https://github.com/ShrikeFound", class: "btn btn-secondary icon icon-github"%>
     </div>
 
   </div>
