--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,6 +12,9 @@
       <li class="nav-item">
         <a class="nav-link" href="<%= about_path%>">About</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="<%= tags_path%>">Categories</a>
+      </li>
       
     </ul>
 
