first draft of about us. yikes.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,28 +1,11 @@
 
-  <div class="container">
+  <div class="container" style="max-width: max-content; margin: 0 auto; ">
     <h1 class="display-4">About Us</h1>
-        <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Maxime ut, voluptatum ex doloribus dignissimos sunt incidunt nulla suscipit, sequi quos, quibusdam unde corrupti praesentium repudiandae eaque. 
-      Temporibus dolorum eius quae ipsa incidunt mollitia facilis repellat doloribus magnam laborum perferendis, quidem cumque praesentium beatae alias. 
-      Recusandae quas velit temporibus incidunt unde placeat earum sint provident asperiores officia, dolorem rem deserunt veritatis error aliquid maxime corporis perferendis? 
-      Eligendi, veritatis aut impedit alias accusamus libero et ex ratione. 
-      Aliquid, ducimus consequuntur fuga cupiditate cum fugit repellendus natus at quia quos non, tempora laudantium repudiandae eveniet odit assumenda quas. 
-      Nihil sequi facere ut autem ex inventore dolorum qui incidunt vero, sit soluta necessitatibus, eaque blanditiis laborum ipsa reprehenderit deserunt culpa exercitationem? 
-      Enim soluta atque cum voluptatem veritatis assumenda optio mollitia inventore corrupti, earum facere voluptates ratione quam dolorem consequatur. 
-      Tempora consectetur similique pariatur beatae magni nam consequuntur sit reprehenderit. 
+    <p style = "max-width: 60ch" >
+      Jon and Alfonso are two friends from San Diego who like to talk about and design games. They are the creators of <strong>Roulette</strong> and <strong>Gnome Mo Faeries</strong>, along with a lot of other rough drafts that they share on their blog. The blog centers around playing and designing games, along with anything else they learn along the way. 
     </p>
-      <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Maxime ut, voluptatum ex doloribus dignissimos sunt incidunt nulla suscipit, sequi quos, quibusdam unde corrupti praesentium repudiandae eaque. 
-      Temporibus dolorum eius quae ipsa incidunt mollitia facilis repellat doloribus magnam laborum perferendis, quidem cumque praesentium beatae alias. 
-      Recusandae quas velit temporibus incidunt unde placeat earum sint provident asperiores officia, dolorem rem deserunt veritatis error aliquid maxime corporis perferendis? 
-      Eligendi, veritatis aut impedit alias accusamus libero et ex ratione. 
-      Aliquid, ducimus consequuntur fuga cupiditate cum fugit repellendus natus at quia quos non, tempora laudantium repudiandae eveniet odit assumenda quas. 
-      Nihil sequi facere ut autem ex inventore dolorum qui incidunt vero, sit soluta necessitatibus, eaque blanditiis laborum ipsa reprehenderit deserunt culpa exercitationem? 
-      Enim soluta atque cum voluptatem veritatis assumenda optio mollitia inventore corrupti, earum facere voluptates ratione quam dolorem consequatur. 
-      Tempora consectetur similique pariatur beatae magni nam consequuntur sit reprehenderit. 
-    </p>
+    <p style = "max-width: 60ch">
+    Jonathan is a freelance illustrator graphic designer currently working on multiple solo projects that he's excited to share. Alfonso works in an office somewhere and likes to talk about RPGs a lot.</p>
 
     <div class="btn-group" role="group" aria-label="Basic example">
       <%= link_to "Instagram", "https://www.instagram.com/jonmakesart/", class: "btn  icon icon-instagram"%>
