--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
   <% @posts.each do |post|%>
 
     <div class="row" >      
-      <div class="card mb-3 custom-card" style="width: 560; margin: 0 auto;">
+      <div class="card mb-3 custom-card" style="width: 560px; margin: 0 auto;">
         <% if post.thumbnail.attached? %>
         <img 
           class ="card-img-top"
